clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_log_to_drive(const struct Handle *handle,
                    const char *filename,
                    char *out_path,
                    size_t out_len);
int xt_log_dropped(const struct Handle *handle, uint64_t *out);
int xt_logging_healthy(const struct Handle *handle, bool *out);
int xt_publish_double(const struct Handle *handle, const char *channel, double value);
int xt_publish_float(const struct Handle *handle, const char *channel, float value);
int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value);
int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value);