clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * {@snippet lang=c :
     * int xt_log_to_drive(const struct Handle *handle, const char *filename, char *out_path, size_t out_len)
     * }
     */
    public static int xt_log_to_drive(MemorySegment handle, MemorySegment filename, MemorySegment out_path, long out_len) {
        var mh$ = xt_log_to_drive.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_log_to_drive", handle, filename, out_path, out_len);
            }
            return (int)mh$.invokeExact(handle, filename, out_path, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_log_dropped {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_log_dropped");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_log_dropped(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static FunctionDescriptor xt_log_dropped$descriptor() {
        return xt_log_dropped.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_log_dropped(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static MethodHandle xt_log_dropped$handle() {
        return xt_log_dropped.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_log_dropped(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static MemorySegment xt_log_dropped$address() {
        return xt_log_dropped.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_log_dropped(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static int xt_log_dropped(MemorySegment handle, MemorySegment out) {
        var mh$ = xt_log_dropped.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_log_dropped", handle, out);
            }
            return (int)mh$.invokeExact(handle, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_logging_healthy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_logging_healthy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_logging_healthy(const struct Handle *handle, bool *out)
     * }
     */
    public static FunctionDescriptor xt_logging_healthy$descriptor() {
        return xt_logging_healthy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_logging_healthy(const struct Handle *handle, bool *out)
     * }
     */
    public static MethodHandle xt_logging_healthy$handle() {
        return xt_logging_healthy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_logging_healthy(const struct Handle *handle, bool *out)
     * }
     */
    public static MemorySegment xt_logging_healthy$address() {
        return xt_logging_healthy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_logging_healthy(const struct Handle *handle, bool *out)
     * }
     */
    public static int xt_logging_healthy(MemorySegment handle, MemorySegment out) {
        var mh$ = xt_logging_healthy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_logging_healthy", handle, out);
            }
            return (int)mh$.invokeExact(handle, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_double");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static FunctionDescriptor xt_publish_double$descriptor() {
        return xt_publish_double.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static MethodHandle xt_publish_double$handle() {
        return xt_publish_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static MemorySegment xt_publish_double$address() {
        return xt_publish_double.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_double(const struct Handle *handle, const char *channel, double value)
     * }
     */
    public static int xt_publish_double(MemorySegment handle, MemorySegment channel, double value) {
        var mh$ = xt_publish_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_double", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_float {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_float");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static FunctionDescriptor xt_publish_float$descriptor() {
        return xt_publish_float.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static MethodHandle xt_publish_float$handle() {
        return xt_publish_float.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static MemorySegment xt_publish_float$address() {
        return xt_publish_float.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_float(const struct Handle *handle, const char *channel, float value)
     * }
     */
    public static int xt_publish_float(MemorySegment handle, MemorySegment channel, float value) {
        var mh$ = xt_publish_float.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_float", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_int32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_int32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static FunctionDescriptor xt_publish_int32$descriptor() {
        return xt_publish_int32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MethodHandle xt_publish_int32$handle() {
        return xt_publish_int32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static MemorySegment xt_publish_int32$address() {
        return xt_publish_int32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_publish_int32(const struct Handle *handle, const char *channel, int32_t value)
     * }
     */
    public static int xt_publish_int32(MemorySegment handle, MemorySegment channel, int value) {
        var mh$ = xt_publish_int32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_publish_int32", handle, channel, value);
            }
            return (int)mh$.invokeExact(handle, channel, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_publish_int64 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_publish_int64");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static FunctionDescriptor xt_publish_int64$descriptor() {
        return xt_publish_int64.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MethodHandle xt_publish_int64$handle() {
        return xt_publish_int64.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_publish_int64(const struct Handle *handle, const char *channel, int64_t value)
     * }
     */
    public static MemorySegment xt_publish_int64$address() {
        return xt_publish_int64.ADDR;
    }
